# breadcrumbs

./: .gitignore  CMakeLists.txt  LasOps.cpp  LasOps.h  MyReader.cpp  MyReader.h  README.md  TiffOps.cpp  TiffOps.h  breadcrumbs.cpp  breadcrumbs.h  donnelly_dome.tif  glen_alps.tif  main.cpp  params.json  research.md  test_1.laz
gallery/: donnelly_g(0, 0, 100)_h(1, 1, 100)_b(1000).tif  donnelly_hillshade.tif  glen_alps_hillshade.tif  no_mods.tif  no_mods_greedy.tif  north-south.tif  only_height_x1000.tif
tiff-gallery/: donnelly_hillshade.tif.aux.xml  g(p000001,100)10h(1, 100)p1.tif  hillshade.tif  origin_spike.tif
ui/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
